# mcdm-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: test.yml
benches/: bench_main.rs
benches/benchmarks/: from_file_bench.rs  mc_bench.rs  mod.rs  uc_bench.rs
crates/mcdmrs/: Cargo.toml
crates/mcdmrs-error/: Cargo.toml
crates/mcdmrs-error/src/: lib.rs
crates/mcdmrs-prom/: Cargo.toml
crates/mcdmrs-prom/benches/: bench_main.rs
crates/mcdmrs-prom/benches/benchmarks/: from_file_bench.rs  mc_bench.rs  uc_bench.rs
crates/mcdmrs-prom/src/: cmp.rs  interop.rs  lib.rs  math.rs  multicriterion_flow.rs  outranking.rs  pref_functions.rs  promethee.rs  types.rs  unicriterion_flow.rs  utils.rs
crates/mcdmrs-wasm/: Cargo.toml  package-lock.json  package.json  vite.config.js
crates/mcdmrs-wasm/src/: lib.rs
crates/mcdmrs-wasm/www/: index.html  index.js
crates/mcdmrs-wasm/www/css/: style.css
crates/mcdmrs-wasm/www/js/: data.js  prom.js
crates/mcdmrs/src/: lib.rs  main.rs
crates/mcdmrs/tests/: cli.rs
crates/py-mcdmrs/: Cargo.toml
crates/py-mcdmrs/mcdmrs/: __init__.py
crates/py-mcdmrs/mcdmrs/prom/: multicriterion_flow.py
crates/py-mcdmrs/mcdmrs/tests/: test_mcdmrs.py
crates/py-mcdmrs/src/: lib.rs
crates/py-mcdmrs/tests/: test_mcdmrs.py
docs/: index.html
docs/assets/: data-BH5YTHfy.js  data-Dtvyt_5u.js  index-Bk5ExaoS.js  index-CqY3aVI8.css  index-D33hI5j5.js  index-DaAaWw2Q.js  mcdmrs_wasm_bg-C4oBsSlr.wasm  mcdmrs_wasm_bg-DPOWTvoF.wasm  mcdmrs_wasm_bg-oiMXeXVG.wasm  workerHelpers.worker-BvbV_mie.js  workerHelpers.worker-CO-JQ6NM.js  workerHelpers.worker-Dbya7RUO.js
examples/: prom_from_file.rs  prom_usual.rs
examples/bench_prom_usual/: Cargo.toml
examples/bench_prom_usual/examples/: bench_prom_usual.rs
examples/data/: alternatives.csv  alternatives_long.csv  alternatives_nan.csv  criteria.csv  criterias.csv
examples/read_csv/: Cargo.toml
examples/read_csv/examples/: read_csv.rs
mcdmrs-wasm/: Cargo.toml  vite.config.js
mcdmrs-wasm/www/: index.html  index.js
py-mcdmrs/: Cargo.toml  pyproject.toml
py-mcdmrs/mcdmrs/: __init__.py
py-mcdmrs/src/: lib.rs
py-mcdmrs/tests/: test_mcdmrs.py
src/: lib.rs  main.rs  matrix.rs  multicriterion_flow.rs  pref_functions.rs  prom.rs  unicriterion_flow.rs
src/prom/: interop.rs  math.rs  matrix.rs  mod.rs  multicriterion_flow.rs  pref_functions.rs  prom.rs  promethee.rs  types.rs  unicriterion_flow.rs  utils.rs
tests/: cli.rs
