[package]
name = "mcdmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.37.0", features = ["csv"], optional = true }
clap = { version = "4.5.1", features = ["derive"], optional = true }
rand = "0.8.5"
rayon = "1.8.1"

[features]
default = ["io", "cli"]
io = ["dep:polars"]
cli = ["dep:clap"]

[dev-dependencies]
polars = { version = "0.37.0", features = ["csv"] }
clap = { version = "4.5.1", features = ["derive"] }
criterion = "0.5.1"
is_close = "0.1.3"
assert_cmd = "2.0.13"

[profile.release]
lto = "thin"
strip = true

[[example]]
name = "prom_usual"

[[bench]]
name = "bench_main"
harness = false
