[package]
name = "mcdmrs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mcdmrs-prom.workspace = true
ndarray.workspace = true
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-rayon = "1.2.1"
console_error_panic_hook = "0.1.7"
