[package]
name = "mcdmrs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mcdmrs-prom.workspace = true
ndarray.workspace = true
getrandom.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-rayon.workspace = true
console_error_panic_hook = "0.1.7"
anyhow = "1.0.80"
